spec/error_undefined_function.expected
before
Parse error: spec/error_undefined_function.kex:4:16: runtime error: Undefined function: doesNotExist
